--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>痴云</title>
+    <title>chimp3 v2</title>
 
   </head>
-  <body oncontextmenu="return false">
+  <body>
     <div id="root"></div>
-
   </body>
 </html>
