加入icon 微调windows下的20px的高度

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chimp3 v2</title>
-
+    <title>CHIMP3V2 B站 痴货发明家</title>
   </head>
   <body>
     <div id="root"></div>
